# gameLabIII

./: .gitignore  .gitmodules
code/: CMakeLists.txt
code/assets/gltf/: boid.glb  enemy1.glb  enemy2.glb  missiles1.glb  planet1.glb  planet2.glb  spaceship1.glb  terrain.glb  untitled.glb
code/assets/shaders/: fragmentShader.frag  instanceShader.vert  rainbowEffectShader.frag
code/assets/shaders/lightSource/: lightSourceShader.frag
code/assets/shaders/shaded/: fragmentShader.frag  vertexShader.vert
code/game/: CMakeLists.txt
code/game/src/: Assets.h  Camera.cpp  Camera.h  Game.cpp  Game.h  main.cpp
code/game/src/entities/: Boid.cpp  Boid.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Missile.cpp  Missile.h  Planet.cpp  Planet.h  Ship.cpp  Ship.h  Swarm.cpp  Swarm.h  Terrain.cpp  Terrain.h
code/game/src/rendering/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
